--- a/src/OSK.Functions.Outputs.Abstractions/OSK.Functions.Outputs.Abstractions.csproj
+++ b/src/OSK.Functions.Outputs.Abstractions/OSK.Functions.Outputs.Abstractions.csproj
@@ -7,4 +7,8 @@
 		<Title>OSK.Functions.Outputs.Abstractions</Title>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="OSK.Hexagonal.MetaData" Version="0.0.1" />
+	</ItemGroup>
+
 </Project>
