--- a/src/OSK.Functions.Outputs.Abstractions/OSK.Functions.Outputs.Abstractions.csproj
+++ b/src/OSK.Functions.Outputs.Abstractions/OSK.Functions.Outputs.Abstractions.csproj
@@ -2,16 +2,13 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.1</TargetFramework>
-		<RepositoryUrl>https://github.com/OpenSourceKingdom/OSK.Functions.Outputs</RepositoryUrl>
-		<RepositoryType>git</RepositoryType>
 		<Description>Provides an abstraction for a .NET mechanism that returns outputs or error information to callers in a simple to use and consolidated way.</Description>
 		<PackageTags>OpenSourceKingdom, OpenSource, Functions, Outputs, Result, Error, Response, Abstraction</PackageTags>
-		<Authors>BlankDev117</Authors>
 		<Title>OSK.Functions.Outputs.Abstractions</Title>
 	</PropertyGroup>
 
-	<PropertyGroup>
-		<PackageLicenseExpression>MIT</PackageLicenseExpression>
-	</PropertyGroup>
+	<ItemGroup>
+	  <PackageReference Include="OSK.Hexagonal.MetaData" Version="0.0.1" />
+	</ItemGroup>
 
 </Project>
