--- a/src/OSK.Functions.Outputs.Abstractions/OSK.Functions.Outputs.Abstractions.csproj
+++ b/src/OSK.Functions.Outputs.Abstractions/OSK.Functions.Outputs.Abstractions.csproj
@@ -5,10 +5,22 @@
 		<Description>Provides an abstraction for a .NET mechanism that returns outputs or error information to callers in a simple to use and consolidated way.</Description>
 		<PackageTags>OpenSourceKingdom, OpenSource, Functions, Outputs, Result, Error, Response, Abstraction</PackageTags>
 		<Title>OSK.Functions.Outputs.Abstractions</Title>
+
+		<RepositoryUrl>https://github.com/OpenSourceKingdom/OSK.Functions.Outputs</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<NoWarn>CS1591</NoWarn>
+		<Authors>BlankDev117</Authors>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
-	<ItemGroup>
-	  <PackageReference Include="OSK.Hexagonal.MetaData" Version="0.0.1" />
+	<ItemGroup>		
+		<PackageReference Include="OSK.Hexagonal.MetaData" Version="0.0.1" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<None Include="..\..\README.md" Pack="true" PackagePath="\"/>
+	</ItemGroup>
+	
 </Project>
