--- a/src/OSK.Functions.Outputs.Logging/OSK.Functions.Outputs.Logging.csproj
+++ b/src/OSK.Functions.Outputs.Logging/OSK.Functions.Outputs.Logging.csproj
@@ -6,15 +6,24 @@
 		<Description>Provides a .NET mechanism for returning outputs or error information, with an ability to log outputs, to callers in a simple to use and consolidated way.</Description>
 		<PackageTags>OpenSourceKingdom, OpenSource, Functions, Outputs, Logging, Logger, Result, Error, Response, Abstraction</PackageTags>
 		<Title>OSK.Functions.Outputs.Logging</Title>
+
+		<RepositoryUrl>https://github.com/OpenSourceKingdom/OSK.Functions.Outputs</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<NoWarn>CS1591</NoWarn>
+		<Authors>BlankDev117</Authors>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\OSK.Functions.Outputs.Logging.Abstractions\OSK.Functions.Outputs.Logging.Abstractions.csproj" />
-	  <ProjectReference Include="..\OSK.Functions.Outputs\OSK.Functions.Outputs.csproj" />
+		<None Include="..\..\README.md" Pack="true" PackagePath="\"/>
+		<ProjectReference Include="..\OSK.Functions.Outputs.Logging.Abstractions\OSK.Functions.Outputs.Logging.Abstractions.csproj" />
+		<ProjectReference Include="..\OSK.Functions.Outputs\OSK.Functions.Outputs.csproj" />
 	</ItemGroup>
 
 </Project>
