--- a/src/OSK.Functions.Outputs.Mocks/OSK.Functions.Outputs.Mocks.csproj
+++ b/src/OSK.Functions.Outputs.Mocks/OSK.Functions.Outputs.Mocks.csproj
@@ -5,9 +5,18 @@
 		<Description>An implementation for OSK.Functions.Outputs meant mainly for unit testing purposes</Description>
 		<PackageTags>OpenSourceKingdom, OpenSource, Functions, Outputs, Result, Error, Response, UnitTests</PackageTags>
 		<Title>OSK.Functions.Outputs.Mocks</Title>
+
+		<RepositoryUrl>https://github.com/OpenSourceKingdom/OSK.Functions.Outputs</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<NoWarn>CS1591</NoWarn>
+		<Authors>BlankDev117</Authors>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<ItemGroup>
+		<None Include="..\..\README.md" Pack="true" PackagePath="\"/>
 		<ProjectReference Include="..\OSK.Functions.Outputs.Abstractions\OSK.Functions.Outputs.Abstractions.csproj" />
 		<ProjectReference Include="..\OSK.Functions.Outputs.Logging.Abstractions\OSK.Functions.Outputs.Logging.Abstractions.csproj" />
 	</ItemGroup>
