--- a/src/OSK.Functions.Outputs/OSK.Functions.Outputs.csproj
+++ b/src/OSK.Functions.Outputs/OSK.Functions.Outputs.csproj
@@ -5,6 +5,14 @@
 		<Description>Provides a .NET mechanism for returning outputs or error information to callers in a simple to use and consolidated way.</Description>
 		<PackageTags>OpenSourceKingdom, OpenSource, Functions, Outputs, Result, Error, Response</PackageTags>
 		<Title>OSK.Functions.Outputs</Title>
+
+		<RepositoryUrl>https://github.com/OpenSourceKingdom/OSK.Functions.Outputs</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<NoWarn>CS1591</NoWarn>
+		<Authors>BlankDev117</Authors>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -12,6 +20,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<None Include="..\..\README.md" Pack="true" PackagePath="\"/>		
 		<ProjectReference Include="..\OSK.Functions.Outputs.Abstractions\OSK.Functions.Outputs.Abstractions.csproj" />
 	</ItemGroup>
 
