--- a/src/OSK.Functions.Outputs.Abstractions/OSK.Functions.Outputs.Abstractions.csproj
+++ b/src/OSK.Functions.Outputs.Abstractions/OSK.Functions.Outputs.Abstractions.csproj
@@ -1,6 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
+		<LangVersion>12</LangVersion>
+		<Nullable>enable</Nullable>
 		<TargetFramework>netstandard2.1</TargetFramework>
 		<Description>Provides an abstraction for a .NET mechanism that returns outputs or error information to callers in a simple to use and consolidated way.</Description>
 		<PackageTags>OpenSourceKingdom, OpenSource, Functions, Outputs, Result, Error, Response, Abstraction</PackageTags>
@@ -16,11 +18,15 @@
 	</PropertyGroup>
 
 	<ItemGroup>		
+		<PackageReference Include="Nullable" Version="1.3.1">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>		
 		<PackageReference Include="OSK.Hexagonal.MetaData" Version="0.1.0" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Include="..\..\README.md" Pack="true" PackagePath="\"/>
+		<None Include="..\..\README.md" Pack="true" PackagePath="\" />
 	</ItemGroup>
 	
 </Project>
