--- a/src/OSK.Functions.Outputs/OSK.Functions.Outputs.csproj
+++ b/src/OSK.Functions.Outputs/OSK.Functions.Outputs.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
+		<LangVersion>12</LangVersion>
 		<TargetFramework>netstandard2.1</TargetFramework>
 		<Description>Provides a .NET mechanism for returning outputs or error information to callers in a simple to use and consolidated way.</Description>
 		<PackageTags>OpenSourceKingdom, OpenSource, Functions, Outputs, Result, Error, Response</PackageTags>
