Update Output Domain (OSK-21) (#22)
Motivation
---
The current project is tightly coupled to HttpStatusCodes, however the
project is not dedicated to strictly HTTP related design. While the
codes coming from the function outputs can be similar to HTTP Status
codes, they are not always the same and they can also potentially be
more numerous than HTTPStatusCodes allow. To this end, decoupling from
HTTPStatusCodes is being sought

Modifications
----
* Updating some properties and method names for various outputs
* Moving Pagination object to the logic library and creating an
interface port to go along with current port convention
* Updating unit tests
* Adding new feature: OutputResponse
* Responses allow for easier aggregation of IOutputs in the case of
looping style logic
* Additional metadata about a functions operation can be determined from
output responses (i.e. runtime metrics, response time stamps)
* OutputResponse supersedes outputs and can replace them; however, will
keep IOutput in the library for the forseeable future in cases where
response style objects are not required for a library
  
Result
----
A breaking change for decoupling from HttpStatusCodes and additional
benefit from IOutputResponseBuilder for more complex output scenarios
where output aggregation or debug metrics are desired (though current
metrics are limited to runtime speed and timestamps).

Fixes #21

--- a/src/OSK.Functions.Outputs.Abstractions/OSK.Functions.Outputs.Abstractions.csproj
+++ b/src/OSK.Functions.Outputs.Abstractions/OSK.Functions.Outputs.Abstractions.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
+		<LangVersion>12</LangVersion>
 		<TargetFramework>netstandard2.1</TargetFramework>
 		<Description>Provides an abstraction for a .NET mechanism that returns outputs or error information to callers in a simple to use and consolidated way.</Description>
 		<PackageTags>OpenSourceKingdom, OpenSource, Functions, Outputs, Result, Error, Response, Abstraction</PackageTags>
@@ -16,11 +17,15 @@
 	</PropertyGroup>
 
 	<ItemGroup>		
-		<PackageReference Include="OSK.Hexagonal.MetaData" Version="0.0.1" />
+		<PackageReference Include="Nullable" Version="1.3.1">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>		
+		<PackageReference Include="OSK.Hexagonal.MetaData" Version="1.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Include="..\..\README.md" Pack="true" PackagePath="\"/>
+		<None Include="..\..\README.md" Pack="true" PackagePath="\" />
 	</ItemGroup>
 	
 </Project>
