--- a/src/OSK.Functions.Outputs.Logging.UnitTests/OSK.Functions.Outputs.Logging.UnitTests.csproj
+++ b/src/OSK.Functions.Outputs.Logging.UnitTests/OSK.Functions.Outputs.Logging.UnitTests.csproj
@@ -16,9 +16,8 @@
 		</PackageReference>
 	</ItemGroup>
 
-
 	<ItemGroup>
-		<ProjectReference Include="..\OSK.Functions.Outputs\OSK.Functions.Outputs.csproj" />
+	  <ProjectReference Include="..\OSK.Functions.Outputs.Logging\OSK.Functions.Outputs.Logging.csproj" />
 	</ItemGroup>
 
 </Project>
